--- a/index.html
+++ b/index.html
@@ -19,27 +19,13 @@
         <div class="col">
         <div class="card h-100">
           <div class="card-body">
-            <h4 class="card-title">asdasd</h4>
+            <h4 class="card-title"></h4>
             <h5 class="card-text">Manager</h5>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ID: 65946</li>
-            <li class="list-group-item">Email: <a href="mailto:sadasd@dfa" class="card-link">sadasd@dfa</a></li>
-            <li class="list-group-item">Office Number: 5</li>
-          </ul>
-        </div>
-      </div>
-      ,  
-        <div class="col">
-        <div class="card h-100">
-          <div class="card-body">
-            <h4 class="card-title">sadsa</h4>
-            <h5 class="card-text">Engineer</h5>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">ID: asdas</li>
-            <li class="list-group-item">Email: <a href="mailto:asdas" class="card-link">asdas</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/adsd" target="_blank" class="card-link">adsd</a></li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:" class="card-link"></a></li>
+            <li class="list-group-item">Office Number: </li>
           </ul>
         </div>
       </div>
@@ -47,13 +33,13 @@
         <div class="col">
         <div class="card h-100">
           <div class="card-body">
-            <h4 class="card-title">asda</h4>
+            <h4 class="card-title"></h4>
             <h5 class="card-text">Intern</h5>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ID: asd</li>
-            <li class="list-group-item">Email: <a href="mailto:asd" class="card-link">asd</a></li>
-            <li class="list-group-item">School: sad</li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:" class="card-link"></a></li>
+            <li class="list-group-item">School: </li>
           </ul>
         </div>
       </div>
@@ -61,13 +47,13 @@
         <div class="col">
         <div class="card h-100">
           <div class="card-body">
-            <h4 class="card-title">asd</h4>
+            <h4 class="card-title"></h4>
             <h5 class="card-text">Engineer</h5>
           </div>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">ID: asd</li>
-            <li class="list-group-item">Email: <a href="mailto:sad" class="card-link">sad</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/asd" target="_blank" class="card-link">asd</a></li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:" class="card-link"></a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/" target="_blank" class="card-link"></a></li>
           </ul>
         </div>
       </div>
